hcp: add versioning and support in-place upgrade
- The version of the software is set in hcp/Makefile and baked into all
  images by an ENV command in the Dockerfile for the base-platform image
  (in the initial "0import" layer).
- When a service performs one-time initialization to create state, the
  version is written to a "version" file.
- When service routines start, they consult the "version" file to detect
  if it is out of date. If so, one takes responsibility for performing an
  in-place upgrade and updating the "version" file as a final step, while
  the other routines perform a slow-poll waiting for the upgrade to
  complete.
- add hcp/versions.txt to record pertinent information.

Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/Makefile
+++ b/hcp/Makefile
@@ -11,6 +11,11 @@ ifndef SAFEBOOT_HCP_RELAX
 HCP_DEPS_COMMON := $(TOP)/Makefile $(HCP_SRC)/settings.mk $(HCP_SRC)/Makefile
 endif
 
+# Current version (and version of state we handle)
+HCP_VER_MAJOR := 1
+HCP_VER_MINOR := 1
+HCP_VER := $(HCP_VER_MAJOR):$(HCP_VER_MINOR)
+
 # Configuration settings. (From wherever. A developer, a CI pipeline, some
 # package-building machinery, ...)
 include hcp/settings.mk
