--- a/hcp/base/Makefile
+++ b/hcp/base/Makefile
@@ -2,6 +2,11 @@
 #
 # An _ordered_ sequence of image layers that build a "base platform".
 # Everything else is derived from the result of these layers.
+#     0import
+#         - imports the upstream/baseline image, see SAFEBOOT_HCP_BASE in
+#           hcp/settings.mk
+#         - puts our (source) version into the image environment, see HCP_VER
+#           in hcp/Makefile.
 #     1apt-source
 #         - optional, see SAFEBOOT_HCP_1APT_ENABLE in hcp/settings.mk
 #         - overrides or supplements the source repositories and signature keys
@@ -50,11 +55,13 @@ HCP_BASE_DEPS_COMMON := $(HCP_DEPS_COMMON) $(HCP_BASE_SRC)/Makefile
 
 # LAYER: 0import
 #      - inherit the debian image we're based on (per hcp/settings.mk)
+#      - stamps in the HCP_VER version
 
 $(HCP_BASE_OUT)/0import.Dockerfile: | $(HCP_BASE_OUT)
 $(HCP_BASE_OUT)/0import.Dockerfile: $(HCP_BASE_DEPS_COMMON)
 $(HCP_BASE_OUT)/0import.Dockerfile:
 	$Qecho "FROM $(SAFEBOOT_HCP_BASE)" > $@
+	$Qecho "ENV HCP_VER=$(HCP_VER)" >> $@
 
 $(HCP_BASE_OUT)/0import.built: $(HCP_BASE_OUT)/0import.Dockerfile
 $(HCP_BASE_OUT)/0import.built:
