hcp: add a python client for enrollsvc-mgmt API
The previous 'enroll.py' included in swtpmsvc is removed and replaced by
a general-purpose command-line tool called 'enroll_api.py' in
hcp/pyclient. This provides subcommands for add/query/delete/find
operations and uses the 'argparse' package to provide argument processing
and usage/help.
- HCP_SWTPMSVC_ENROLL_URL is replaced by HCP_SWTPMSVC_ENROLL_API, where
  the former included a '/v1/add' suffix and the latter does not.
- Add extra declarations in hcp/scripts/Makefile to include enroll_api.py
  in the swtpmsvc container image.
- Adapt swtpmsvc setup code to use the new interface.

Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/scripts/Makefile
+++ b/hcp/scripts/Makefile
@@ -124,6 +124,8 @@ $(eval $(call scripts_target_add,hcp.swtpmsvc))
 $(foreach i,$(HCP_SCRIPTS_HCP_SWTPMSVC_FILES),\
 	$(eval $(call scripts_add,hcp.swtpmsvc,hcp/swtpmsvc,\
 		$(TOP)/hcp/swtpmsvc,$i,755)))
+$(eval $(call scripts_add,hcp.swtpmsvc,hcp/swtpmsvc,\
+	$(TOP)/hcp/pyclient,enroll_api.py,755))
 
 $(HCP_SCRIPTS_OUT)/hcp-swtpmsvc.tar.gz: $(HCP_SCRIPTS_OUT)/hcp.swtpmsvc
 $(HCP_SCRIPTS_OUT)/hcp-swtpmsvc.tar.gz:
