--- a/hcp/caboodle/Dockerfile
+++ b/hcp/caboodle/Dockerfile
@@ -1,2 +1,21 @@
-COPY test-everything.sh /
-RUN chmod 755 /test-everything.sh
+ENV HCP_SERVICES="enroll attest swtpm"
+ENV HCP_ENROLLSVC_STATE_PREFIX=/state/enrollsvc
+ENV HCP_RUN_ENROLL_SIGNER=/creds/asset-signer
+ENV HCP_ATTESTSVC_STATE_PREFIX=/state/attestsvc
+ENV HCP_ATTESTSVC_REMOTE_REPO=git://localhost/enrolldb
+ENV HCP_ATTESTSVC_UPDATE_TIMER=10
+ENV HCP_SWTPMSVC_STATE_PREFIX=/state/swtpmsvc
+ENV HCP_SWTPMSVC_ENROLL_HOSTNAME=localhost
+ENV HCP_SWTPMSVC_ENROLL_API=http://localhost:5000
+ENV HCP_RUN_CLIENT_VERIFIER=/creds/asset-verifier
+ENV HCP_CLIENT_ATTEST_URL=http://localhost:8080
+ENV HCP_RUN_CLIENT_TPM2TOOLS_TCTI=swtpm:host=localhost,port=9876
+
+RUN mkdir -p $HCP_ENROLLSVC_STATE_PREFIX
+RUN mkdir -p $HCP_ATTESTSVC_STATE_PREFIX
+RUN mkdir -p $HCP_SWTPMSVC_STATE_PREFIX
+
+RUN mkdir -p $HCP_RUN_ENROLL_SIGNER
+RUN mkdir -p $HCP_RUN_CLIENT_VERIFIER
+
+RUN /hcp/caboodle/regen-creds.sh
