hcp: caboodle more
Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/scripts/Makefile
+++ b/hcp/scripts/Makefile
@@ -3,7 +3,7 @@ HCP_SCRIPTS_OUT := $(HCP_OUT)/scripts
 $(HCP_SCRIPTS_OUT): | $(HCP_OUT)
 MDIRS += $(HCP_SCRIPTS_OUT)
 
-# $1 = target that this script defines a rule for. E.g. sb.root, sb.sbin,
+# $1 = target that this script defines a rule for. E.g. sb.root, sb.sbin, sb.tests, sb.initramfs,
 #       hcp.enrollsvc, etc.
 define scripts_target_add
 $(HCP_SCRIPTS_OUT)/$1: | $(HCP_SCRIPTS_OUT)
@@ -31,11 +31,18 @@ endef
 ######################################
 
 # Two destination directories; /safeboot, /safeboot/sbin
-HCP_SCRIPTS_SB_ROOT := $(HCP_SCRIPTS_OUT)/safeboot
-HCP_SCRIPTS_SB_SBIN := $(HCP_SCRIPTS_SB_ROOT)/sbin
-$(HCP_SCRIPTS_SB_ROOT): | $(HCP_SCRIPTS_OUT)
-$(HCP_SCRIPTS_SB_SBIN): | $(HCP_SCRIPTS_SB_ROOT)
-MDIRS += $(HCP_SCRIPTS_SB_ROOT) $(HCP_SCRIPTS_SB_SBIN)
+HCP_SCRIPTS_SB_ROOT      := $(HCP_SCRIPTS_OUT)/safeboot
+HCP_SCRIPTS_SB_SBIN      := $(HCP_SCRIPTS_SB_ROOT)/sbin
+HCP_SCRIPTS_SB_TESTS     := $(HCP_SCRIPTS_SB_ROOT)/tests
+HCP_SCRIPTS_SB_INITRAMFS := $(HCP_SCRIPTS_SB_ROOT)/initramfs
+$(HCP_SCRIPTS_SB_ROOT):      | $(HCP_SCRIPTS_OUT)
+$(HCP_SCRIPTS_SB_SBIN):      | $(HCP_SCRIPTS_SB_ROOT)
+$(HCP_SCRIPTS_SB_TESTS):     | $(HCP_SCRIPTS_SB_ROOT)
+$(HCP_SCRIPTS_SB_INITRAMFS): | $(HCP_SCRIPTS_SB_ROOT)
+MDIRS += $(HCP_SCRIPTS_SB_ROOT)
+MDIRS += $(HCP_SCRIPTS_SB_SBIN)
+MDIRS += $(HCP_SCRIPTS_SB_TESTS)
+MDIRS += $(HCP_SCRIPTS_SB_INITRAMFS)
 
 # files for /safeboot
 HCP_SCRIPTS_SB_ROOT_FILES := functions.sh safeboot.conf
@@ -49,9 +56,32 @@ $(eval $(call scripts_target_add,sb.sbin))
 $(foreach i,$(HCP_SCRIPTS_SB_SBIN_FILES),\
 	$(eval $(call scripts_add,sb.sbin,safeboot/sbin,$(TOP)/sbin,$i,755)))
 
+# files for /safeboot/tests
+HCP_SCRIPTS_SB_TESTS_FILES := $(shell ls -1 $(TOP)/tests)
+$(eval $(call scripts_target_add,sb.tests))
+$(foreach i,$(HCP_SCRIPTS_SB_TESTS_FILES),\
+	$(eval $(call scripts_add,sb.tests,safeboot/tests,$(TOP)/tests,$i,755)))
+
+# files for /safeboot/initramfs
+HCP_SCRIPTS_SB_INITRAMFS_FILES := bootscript		\
+				  busybox.config	\
+				  cmdline.txt		\
+				  config.sh		\
+				  dev.cpio		\
+				  files.txt		\
+				  init			\
+				  linux.config		\
+				  udhcpc.sh
+
+$(eval $(call scripts_target_add,sb.initramfs))
+$(foreach i,$(HCP_SCRIPTS_SB_INITRAMFS_FILES),\
+	$(eval $(call scripts_add,sb.initramfs,safeboot/initramfs,$(TOP)/initramfs,$i,755)))
+
 # safeboot.tar.gz
 $(HCP_SCRIPTS_OUT)/safeboot.tar.gz: $(HCP_SCRIPTS_OUT)/sb.root
 $(HCP_SCRIPTS_OUT)/safeboot.tar.gz: $(HCP_SCRIPTS_OUT)/sb.sbin
+$(HCP_SCRIPTS_OUT)/safeboot.tar.gz: $(HCP_SCRIPTS_OUT)/sb.tests
+$(HCP_SCRIPTS_OUT)/safeboot.tar.gz: $(HCP_SCRIPTS_OUT)/sb.initramfs
 $(HCP_SCRIPTS_OUT)/safeboot.tar.gz:
 	$Qtar zcf $(HCP_SCRIPTS_OUT)/safeboot.tar.gz \
 		--owner root:0 --group root:0 -C $(HCP_SCRIPTS_OUT) safeboot
